# forhemit-sparrow

./: .gitignore  AGENTS.md  README.md
BrainStormThreads/: AI Expense Reduction Agent Brainstorm - Google Gemini (7_20_2026 9：48：06 AM).txt  ASTRYX_COMPONENTS_PLAN.md  Arena ｜ Benchmark & Compare the Best AI Models (7_20_2026 9：47：32 AM).html  Arena ｜ Benchmark & Compare the Best AI Models (7_20_2026 9：47：32 AM).txt  Arena ｜ Benchmark & Compare the Best AI Models (7_20_2026 9：48：15 AM).html  Arena ｜ Benchmark & Compare the Best AI Models (7_20_2026 9：48：15 AM).txt  COMPARISON_REPORT.md  DEEP_RESEARCH_SPEC.md  Expense Reduction Agent App Brainstorm - DeepSeek (7_20_2026 9：47：46 AM).html  Expense Reduction Agent App Brainstorm - DeepSeek (7_20_2026 9：47：46 AM).txt  Expense Reduction Agent App Brainstorm - Google Gemini (7_20_2026 9：47：59 AM).txt  Expense Reduction App - DeepSeek (7_20_2026 9：47：40 AM).html  Expense Reduction App - DeepSeek (7_20_2026 9：47：40 AM).txt  KIMI_FULL_RESPONSE.txt  LIVE_VS_SPEC_TEST.md  MERGED_ARCHITECTURE.md  Privacy‑First Expense Optimizer - Kimi (7_20_2026 9：47：52 AM).html  Privacy‑First Expense Optimizer - Kimi (7_20_2026 9：47：52 AM).txt  REPORT_TEMPLATE_DESIGN.md  SparrowApp.md  report_astrix_v2.html  report_template.html
agent/: .gitignore  README.md  SETUP_COMPLETE.md  agent.py  config.py  data_extractor.py  extractor.py  judge.py  main.py  run.py  (+8 more)
sparrow-app/: Cargo.toml  PRIVACY_POLICY.md  README.md
sparrow-app/src/: index.html  main.rs
sparrow-app/src-tauri/: Cargo.toml  tauri.conf.json
sparrow-app/src-tauri/src/: lib.rs  main.rs
(+4 files in other folders)
